yaml/30-service-hello-world.yaml
apiVersion: v1
kind: Service
metadata:
  name: smpl-go-web-s
#  namespace: default
spec:
  selector:
    app: smpl-go-web-a
  ports:
  - port: 8080
